audio discovery & platform-based dependency

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,9 @@ jarvis-config.sh
 jarvis-commands
 
 jarvis-record.flac
+
+jarvis-commands-default.bak
+
+jarvis-config-default.sh.bak
+
+jarvis-config.sh.bak
