new user interface

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,49 @@ jarvis-events
 jarvis.log
 
 jarvis-config.sh.old
+
+config/all_matches
+
+config/check_updates
+
+config/command_stt
+
+config/conversation_mode
+
+config/dictionary
+
+config/google_speech_api_key
+
+config/language
+
+config/language_model
+
+config/max_noise_duration_to_kill
+
+config/min_noise_duration_to_start
+
+config/min_noise_perc_to_start
+
+config/min_silence_duration_to_stop
+
+config/min_silence_level_to_stop
+
+config/play_hw
+
+config/pocketsphinxlog
+
+config/rec_hw
+
+config/tmp_folder
+
+config/trigger
+
+config/trigger_mode
+
+config/trigger_stt
+
+config/tts_engine
+
+config/username
+
+config/wit_server_access_token
