--- a/.gitignore
+++ b/.gitignore
@@ -78,3 +78,25 @@ stt_engines/snowboy/snowboydetect.pyc
 *.pmdl
 
 config/separator
+
+config/empty
+
+config/empty
+
+config/phrase_failed
+
+config/phrase_triggered
+
+config/phrase_welcome
+
+hooks/entering_cmd
+
+config/phrase_misunderstood
+
+config/empty
+
+hooks/exiting_cmd
+
+hooks/program_exit
+
+hooks/program_startup
