--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,20 @@ stt_engines/snowboy/snowboydetect.py
 
 stt_engines/snowboy/snowboydetect.pyc
 
+stt_engines/deepspeech/audio/
+
+stt_engines/deepspeech/bin/
+
+stt_engines/deepspeech/deepspeech-0.7.0-models.pbmm
+
+stt_engines/deepspeech/deepspeech-0.7.0-models.scorer
+
+stt_engines/deepspeech/include/
+
+stt_engines/deepspeech/lib/
+
+stt_engines/deepspeech/share/
+
 *.pmdl
 
 hooks/entering_cmd
