Add support for updating DeepSpeech

--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,11 @@ stt_engines/deepspeech/audio/
 
 stt_engines/deepspeech/bin/
 
-stt_engines/deepspeech/deepspeech-0.7.0-models.pbmm
+stt_engines/deepspeech/*.pbmm
 
-stt_engines/deepspeech/deepspeech-0.7.0-models.scorer
+stt_engines/deepspeech/*.tflite
+
+stt_engines/deepspeech/*.scorer
 
 stt_engines/deepspeech/deepspeech.log
 
